pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwartsAdminInferNoHintsGivenHints_NoHint_AdminPoliciesEnabled_InferHints/adminPolicies.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
    annotations:
        description: '(jump_to_application: (src: (group = Gryffindor) dst: (group = Gryffindor) conn: TCP)'
        nsx-id: "10218"
    creationTimestamp: null
    name: admin-policy-0
spec:
    egress:
        - action: Pass
          ports:
            - portRange:
                end: 65535
                protocol: TCP
                start: 1
          to:
            - pods:
                namespaceSelector:
                    matchExpressions:
                        - key: kubernetes.io/metadata.name
                          operator: In
                          values:
                            - default
                podSelector:
                    matchExpressions:
                        - key: group__Gryffindor
                          operator: Exists
    priority: 1
    subject:
        pods:
            namespaceSelector:
                matchLabels:
                    kubernetes.io/metadata.name: default
            podSelector:
                matchExpressions:
                    - key: group__Gryffindor
                      operator: Exists
status:
    conditions: null
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
    annotations:
        description: '(jump_to_application: (src: (group = Gryffindor) dst: (group = Gryffindor) conn: TCP)'
        nsx-id: "10218"
    creationTimestamp: null
    name: admin-policy-1
spec:
    ingress:
        - action: Pass
          from:
            - pods:
                namespaceSelector:
                    matchExpressions:
                        - key: kubernetes.io/metadata.name
                          operator: In
                          values:
                            - default
                podSelector:
                    matchExpressions:
                        - key: group__Gryffindor
                          operator: Exists
          ports:
            - portRange:
                end: 65535
                protocol: TCP
                start: 1
    priority: 2
    subject:
        pods:
            namespaceSelector:
                matchLabels:
                    kubernetes.io/metadata.name: default
            podSelector:
                matchExpressions:
                    - key: group__Gryffindor
                      operator: Exists
status:
    conditions: null
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
    annotations:
        description: '(jump_to_application: (src: (group = Hufflepuff) dst: (group = Hufflepuff) conn: UDP dst-ports: 300-320)'
        nsx-id: "10219"
    creationTimestamp: null
    name: admin-policy-2
spec:
    ingress:
        - action: Pass
          from:
            - pods:
                namespaceSelector:
                    matchExpressions:
                        - key: kubernetes.io/metadata.name
                          operator: In
                          values:
                            - default
                podSelector:
                    matchExpressions:
                        - key: group__Hufflepuff
                          operator: Exists
          ports:
            - portRange:
                end: 320
                protocol: UDP
                start: 300
    priority: 3
    subject:
        pods:
            namespaceSelector:
                matchLabels:
                    kubernetes.io/metadata.name: default
            podSelector:
                matchExpressions:
                    - key: group__Hufflepuff
                      operator: Exists
status:
    conditions: null
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
    annotations:
        description: '(jump_to_application: (src: (group = Slytherin) dst: (group = Slytherin) conn: All Connections)'
        nsx-id: "10220"
    creationTimestamp: null
    name: admin-policy-3
spec:
    egress:
        - action: Pass
          ports: null
          to:
            - pods:
                namespaceSelector:
                    matchExpressions:
                        - key: kubernetes.io/metadata.name
                          operator: In
                          values:
                            - default
                podSelector:
                    matchExpressions:
                        - key: group__Slytherin
                          operator: Exists
    priority: 4
    subject:
        pods:
            namespaceSelector:
                matchLabels:
                    kubernetes.io/metadata.name: default
            podSelector:
                matchExpressions:
                    - key: group__Slytherin
                      operator: Exists
status:
    conditions: null
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
    annotations:
        description: '(jump_to_application: (src: (group = Slytherin) dst: (group = Slytherin) conn: All Connections)'
        nsx-id: "10220"
    creationTimestamp: null
    name: admin-policy-4
spec:
    ingress:
        - action: Pass
          from:
            - pods:
                namespaceSelector:
                    matchExpressions:
                        - key: kubernetes.io/metadata.name
                          operator: In
                          values:
                            - default
                podSelector:
                    matchExpressions:
                        - key: group__Slytherin
                          operator: Exists
          ports: null
    priority: 5
    subject:
        pods:
            namespaceSelector:
                matchLabels:
                    kubernetes.io/metadata.name: default
            podSelector:
                matchExpressions:
                    - key: group__Slytherin
                      operator: Exists
status:
    conditions: null
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
    annotations:
        description: '(jump_to_application: (src: (group = Dumbledore) dst: (group = Gryffindor) conn: All Connections)'
        nsx-id: "10221"
    creationTimestamp: null
    name: admin-policy-5
spec:
    egress:
        - action: Pass
          ports: null
          to:
            - pods:
                namespaceSelector:
                    matchExpressions:
                        - key: kubernetes.io/metadata.name
                          operator: In
                          values:
                            - default
                podSelector:
                    matchExpressions:
                        - key: group__Gryffindor
                          operator: Exists
    priority: 6
    subject:
        pods:
            namespaceSelector:
                matchLabels:
                    kubernetes.io/metadata.name: default
            podSelector:
                matchExpressions:
                    - key: group__Dumbledore
                      operator: Exists
status:
    conditions: null
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
    annotations:
        description: '(jump_to_application: (src: (group = Dumbledore) dst: (group = Gryffindor) conn: All Connections)'
        nsx-id: "10221"
    creationTimestamp: null
    name: admin-policy-6
spec:
    ingress:
        - action: Pass
          from:
            - pods:
                namespaceSelector:
                    matchExpressions:
                        - key: kubernetes.io/metadata.name
                          operator: In
                          values:
                            - default
                podSelector:
                    matchExpressions:
                        - key: group__Dumbledore
                          operator: Exists
          ports: null
    priority: 7
    subject:
        pods:
            namespaceSelector:
                matchLabels:
                    kubernetes.io/metadata.name: default
            podSelector:
                matchExpressions:
                    - key: group__Gryffindor
                      operator: Exists
status:
    conditions: null
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
    annotations:
        description: '(deny: (src: (*) dst: (*) conn: All Connections)'
        nsx-id: "10300"
    creationTimestamp: null
    name: admin-policy-7
spec:
    egress:
        - action: Deny
          ports: null
          to:
            - pods:
                namespaceSelector:
                    matchExpressions:
                        - key: kubernetes.io/metadata.name
                          operator: In
                          values:
                            - default
                podSelector: {}
    priority: 8
    subject:
        pods:
            namespaceSelector:
                matchLabels:
                    kubernetes.io/metadata.name: default
            podSelector: {}
status:
    conditions: null
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
    annotations:
        description: '(deny: (src: (*) dst: (*) conn: All Connections)'
        nsx-id: "10300"
    creationTimestamp: null
    name: admin-policy-8
spec:
    ingress:
        - action: Deny
          from:
            - pods:
                namespaceSelector:
                    matchExpressions:
                        - key: kubernetes.io/metadata.name
                          operator: In
                          values:
                            - default
                podSelector: {}
          ports: null
    priority: 9
    subject:
        pods:
            namespaceSelector:
                matchLabels:
                    kubernetes.io/metadata.name: default
            podSelector: {}
status:
    conditions: null
